--- a/styles/shared.css
+++ b/styles/shared.css
@@ -5,6 +5,13 @@ h1{
     color: rgb(48, 48, 48);
 }
 
+.description{
+    font-family: 'PT Sans', sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    color: rgb(48, 48, 48);
+}
+
 body{
     text-align: center;
     background-color: rgb(124, 124, 124);
